--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
-<div class="topic_links">
-  <h2>Backbone</h2>
-  <a href="/topics/1" class="detail_toggle">Show Details</a>
-  <p class="detail hidden">Backbone.js gives structure to web applications by providing models with key-value binding and custom events, collections with a rich API of enumerable functions, views with declarative event handling, and connects it all to your existing API over a RESTful JSON interface.</p>
+<div class="topics_container">
+  <div class="topic_links">
+    <h2>Backbone</h2>
+    <a href="/topics/1" class="detail_toggle">Show Details</a>
+    <p class="detail hidden">Backbone.js gives structure to web applications by providing models with key-value binding and custom events, collections with a rich API of enumerable functions, views with declarative event handling, and connects it all to your existing API over a RESTful JSON interface.</p>
+  </div>
 </div>
