--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,3 +13,6 @@
     <p class="detail hidden">AngularJS is what HTML would have been, had it been designed for building web-apps.Declarative templates with data-binding, MVW, MVVM, MVC, dependency injection and great testability story all implemented with pure client-side JavaScript!</p>
   </div>
 </div>
+
+<div id="autodiv">
+</div>
