Tie into Rails UJS (WIP)

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,13 +3,13 @@
 
   <div class="topic_links">
     <h2>Backbone</h2>
-    <a href="/topics/1" class="detail_toggle">Show Details</a>
+    <a href="/topics/1" class="detail_toggle" data-remote="true">Show Details</a>
     <p class="detail hidden">Backbone.js gives structure to web applications by providing models with key-value binding and custom events, collections with a rich API of enumerable functions, views with declarative event handling, and connects it all to your existing API over a RESTful JSON interface.</p>
   </div>
 
   <div class="topic_links">
     <h2>AngularJS</h2>
-    <a href="/topics/2" class="detail_toggle">Show Details</a>
+    <a href="/topics/2" class="detail_toggle" data-remote="true">Show Details</a>
     <p class="detail hidden">AngularJS is what HTML would have been, had it been designed for building web-apps.Declarative templates with data-binding, MVW, MVVM, MVC, dependency injection and great testability story all implemented with pure client-side JavaScript!</p>
   </div>
 </div>
